--- a/src/templates/pages/work/all.html
+++ b/src/templates/pages/work/all.html
@@ -1,6 +1,6 @@
 ---
 meta_title: 'Portfolio | Kyle Langford'
-meta_description: 'A list of professional work'
+meta_description: 'A list of professional design and development work'
 back_url: /
 back_text: $ cd ..
 work:   
