--- a/src/templates/pages/work/brm.html
+++ b/src/templates/pages/work/brm.html
@@ -1,6 +1,6 @@
 ---
 meta_title: 'BRM Site Design and Drupal Development | Kyle Langford'
-meta_description: 'Portfolio example for Bally Ribbon Mills site design and Drupal development project, work done at Brunello, Inc.'
+meta_description: 'Portfolio example by Kyle Langford for Bally Ribbon Mills site design and Drupal development project, work done at Brunello, Inc.'
 title: Bally Ribbon Mills
 description: Site Design and Drupal Development
 attribution: Work done at Brunello, Inc.
