--- a/src/templates/pages/work/cpl.html
+++ b/src/templates/pages/work/cpl.html
@@ -1,10 +1,10 @@
 ---
 meta_title: 'Cambridge Public Library wayfinding and signage | Kyle Langford'
-meta_description: 'Portfolio example for the Cambridge Public Library wayfinding and signage project, work done at Wojciechowski Design.'
+meta_description: 'Portfolio example by Kyle Langford for the Cambridge Public Library wayfinding and signage project, work done at Wojciechowski Design.'
 title: Cambridge Public Library
 description: Wayfinding and Signage
 attribution: Work done at Wojciechowski Design
-last-edit: 5.30.19
+last-edit: 10.31.19
 back-url: /work/all
 team:   
 -
