--- a/src/templates/pages/work/fitnessapp.html
+++ b/src/templates/pages/work/fitnessapp.html
@@ -1,10 +1,10 @@
 ---
 meta_title: 'Elev8d Fitness Angular Video Component and Playlist | Kyle Langford'
-meta_description: 'Portfolio example for Elev8d Fitness Angular Video Component and Playlist project, work done at Brunello, Inc. '
+meta_description: 'Portfolio example by Kyle Langford for Elev8d Fitness Angular Video Component and Playlist project, work done at Brunello, Inc. '
 title: Elev8d Fitness
 attribution: Work done at Brunello, Inc.
 description: Angular Video Component and Playlist
-last-edit: 5.30.19
+last-edit: 10.31.19
 back-url: /work/all
 team:   
 -
