--- a/src/templates/pages/work/hle.html
+++ b/src/templates/pages/work/hle.html
@@ -1,10 +1,10 @@
 ---
 meta_title: 'HLE Design and Frontend Development | Kyle Langford'
-meta_description: ''
+meta_description: 'Portfolio example by Kyle Langford on Healthly Living Engine application design and development while at Brunello, inc'
 title: Healthly Living Engine
 description: UI Design and Frontend Development
 attribution: Work done at Brunello, Inc.
-last-edit: 5.30.19
+last-edit: 10.31.19
 back-url: /work/all
 team:   
 -
