--- a/src/templates/pages/work/paw.html
+++ b/src/templates/pages/work/paw.html
@@ -1,10 +1,10 @@
 ---
 meta_title: 'PAW Design and Drupal Development | Kyle Langford'
-meta_description: 'Work by Kyle Langford on Princeton Alumni Weekly Magazine site design and development while at Brunello, inc'
+meta_description: 'Portfolio example by Kyle Langford on Princeton Alumni Weekly Magazine site design and development while at Brunello, inc'
 title: PAW
 description: Site Design and Drupal Development
 attribution: Work done at Brunello, Inc.
-last-edit: 5.30.19
+last-edit: 10.31.19
 back-url: /work/all
 team:   
 -
