--- a/src/templates/pages/articles/all.html
+++ b/src/templates/pages/articles/all.html
@@ -1,54 +1,55 @@
 ---
-page_title: Blog
-header_url: '/'
-header_link_text: "$ cd .."
-catergoy: blog
+meta_title: 'Blog | Kyle Langford'
+meta_description: 'A list of professional thoughts and musings'
+back_url: /
+back_text: $ cd ..
+articles:   
+-
+  title: Bally Ribbon Mills
+  description: Web Design, Logo Design, Drupal Development
+  href: /work/brm
+-
 ---
 
-{{> section}}
+<header class="container size-to-window portfolio">
+  <div class="row flex flex-align--center flex--justify fill-height">
+    <nav class="position-top-left">
+      <a href="{{back_url}}" class="button--previous">{{back_text}}</a>
+    </nav>
+    <div class="column two-thirds">
+      <h1 class="page__title">Blog</h1>
+      <p class="description">
+        Some thoughts and stuff.
+      </p>
+    </div>
+  </div>
+</header>
 
 <main class="container">
   <div class="row flex flex--justify pad-default">
     <div class="column two-thirds">
-      <ul class="list blog">
-        <li class="list__item">
-          <article class="view--teaser">
-            <a href="/articles/alt-text.html">
-              <h2 class="label">Putting Accessiblity in the Users hands</h2>
-            </a>
-            <small
-              >March 25, 2019<!-- -->
-              • ☕️ 4 min read</small
-            >
-            <p>A change starts with a story.</p>
-          </article>
-        </li>
 
-        <li class="list__item">
-          <article class="view--teaser">
-            <a href="/articles/article.html">
-              <h2 class="label">Putting Accessiblity in the Users hands</h2>
-            </a>
-            <small
-              >March 25, 2019<!-- -->
-              • ☕️ 4 min read</small
-            >
-            <p>A change starts with a story.</p>
-          </article>
-        </li>
-        <li class="list__item">
-          <article class="view--teaser">
-            <a href="/articles/article.html">
-              <h2 class="label">Putting Accessiblity in the Users hands</h2>
-            </a>
-            <small
-              >March 25, 2019<!-- -->
-              • ☕️ 4 min read</small
-            >
-            <p>A change starts with a story.</p>
-          </article>
-        </li>
+      <!-- <h3 class="list-title animate fade-in">Blog</h3> -->
+      <ul class="list portfolio">
+        {{#each articles}}
+          <li class="list__item animate fade-in">
+            <article class="view--teaser">
+              <a href="{{ this.href }}">
+                <span class="label">{{ this.title }}</span>
+                <p>
+                  {{ this.description }}
+                </p>
+              </a>
+            </article>
+          </li>
+        {{/each}}
       </ul>
+
+      <div class="line-behind-text purple">
+        <!-- Credits: Copyright -->
+        <h2 class="last-edit">THANK YOU</h2>
+      </div>
+      
     </div>
   </div>
 </main>
