--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -9,7 +9,14 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
     <div class="column two-thirds">
       <div class="intro-message">
         <h1 class="page__title">Kyle Langford</h1>
-        <h2 class="page__sub-title">&nbsp;Currently <span class="icons-at-sign"></span>Brunello <span class="icons-coffee"></span> Working on Drupal websites <span class="icons-droplet"></span> Web Design projects and frontend dev <span class="icons-zap"></span> located in Boston, MA<span class="icons-home"></span></h2>
+        <h2 class="page__sub-title">
+          &nbsp;Currently <span class="icons-at-sign"></span>Brunello
+          <span class="icons-coffee"></span> Working on Drupal websites
+          <span class="icons-droplet"></span> Web Design projects and frontend
+          dev <span class="icons-zap"></span> located in Boston, MA<span
+            class="icons-home"
+          ></span>
+        </h2>
       </div>
     </div>
   </div>
@@ -19,10 +26,13 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
   <div class="row flex flex-align--center fill-height pad-default">
     <div class="column two-thirds animate fade-in">
       <p class="text--large">
-        My name is Kyle Langford I have 10 years of professional experience and entrepreneurship in creating digital experiences. I focus on designing easy to use interfaces and writing clean human-readable code. I am passionate about learning new skills and refining my process. I have a positive attitude and enjoy bringing ideas to life.
+        My name is Kyle Langford I have 10 years of professional experience and
+        entrepreneurship in creating digital experiences. I focus on designing
+        easy to use interfaces and writing clean human-readable code. I am
+        passionate about learning new skills and refining my process. I have a
+        positive attitude and enjoy bringing ideas to life.
       </p>
     </div>
-
     <figure class="image">
       <img
         src="assets/img/svg/laptop.svg"
@@ -33,14 +43,14 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
 </section>
 
 <section class="container size-to-window relative">
-  <!-- 2.0 - User Interface Design  -->
+  <!-- User Interface Design  -->
   <header class="row pad-default">
     <div class="column">
       <div class="text--display"><strong>Design</strong></div>
       <p>Modern. Simple. Human.</p>
     </div>
   </header>
-  <!-- 2.1 - Capabilities -->
+  <!-- Capabilities -->
   <div class="row flex pad-default">
     <div class="column one-fourth animate fade-in">
       <p class="list-title">Interface Design</p>
@@ -52,7 +62,7 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
       </ul>
     </div>
     <div class="column one-fourth animate fade-in">
-      <!-- 3.1 - Capabilities  -->
+      <!-- Capabilities  -->
       <p class="list-title">Experience Design</p>
       <ul class="pretty">
         <li>Accessibility</li>
@@ -60,7 +70,7 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
         <li>Product Design</li>
       </ul>
     </div>
-    <!-- 2.2 - Design Tools -->
+    <!-- Design Tools -->
     <div class="column one-fourth animate fade-in">
       <p class="list-title">Design Tools</p>
       <ul class="pretty">
@@ -72,22 +82,22 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
         <li>Sketch</li>
       </ul>
     </div>
-
   </div>
 </section>
 
 <section class="container size-to-window relative">
-  <!-- 4.0 - Frontend Development  -->
+  <!-- Development  -->
   <header class="row flex--inline  pad-default">
     <div class="column">
-      <div class="text--display"><strong>Dev<span class="hide--for-mobile">elopment</span></strong></div>
-      <!-- <p>Design systems, not pages.</p> -->
+      <div class="text--display">
+        <strong>Dev<span class="hide--for-mobile">elopment</span></strong>
+      </div>
       <p>Plan. Implement. Iterate.</p>
     </div>
   </header>
 
   <div class="row flex  pad-default">
-    <!-- 4.1 - Capabilities -->
+    <!-- Capabilities -->
     <div class="column one-fourth animate fade-in">
       <p class="list-title">Capabilities</p>
       <ul class="pretty">
@@ -97,8 +107,7 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
         <li>Website Development</li>
       </ul>
     </div>
-
-    <!-- 4.2 - Foundation -->
+    <!-- Core -->
     <div class="column one-fourth animate fade-in">
       <p class="list-title">Core</p>
       <ul class="pretty">
@@ -109,8 +118,7 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
         <li>PHP</li>
       </ul>
     </div>
-
-    <!-- 4.1 - Technologies -->
+    <!-- Technologies -->
     <div class="column one-fourth animate fade-in">
       <p class="list-title">Technologies</p>
       <ul class="pretty">
@@ -125,7 +133,7 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
 </section>
 
 <section class="container contact size-to-window relative">
-  <!-- 5.0 - Contact -->
+  <!-- Contact Info -->
   <header class="row pad-default">
     <div class="column">
       <h2 class="section__title">Info</h2>
@@ -133,14 +141,13 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
   </header>
 
   <div class="row flex pad-double">
-    <!-- 5.1 - Get in Touch -->
+    <!-- Get in Touch -->
     <div class="column one-fourth animate fade-in">
       <p class="list-title">Get in Touch</p>
       <ul class="pretty">
         <li class="list__item">
           <a href="mailto:kyle@raskyl.com"
-            ><span class="icon icon-list icons-mail"></span
-            >kyle@raskyl.com</a
+            ><span class="icon icon-list icons-mail"></span>kyle@raskyl.com</a
           >
         </li>
         <li class="list__item">
@@ -155,7 +162,7 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
         </li>
       </ul>
     </div>
-    <!-- 5.2 - Locations -->
+    <!-- Locations -->
     <div class="column one-fourth animate fade-in">
       <p class="list-title">Locations</p>
       <ul class="pretty">
@@ -164,7 +171,7 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
         </li>
       </ul>
     </div>
-    <!-- 5.3 - Misc Links -->
+    <!-- Misc Links -->
     <div class="column one-fourth animate fade-in">
       <p class="list-title">Links</p>
       <ul class="pretty">
@@ -179,20 +186,17 @@ meta_description: My name is Kyle Langford, and this is my Web Design and Develo
           >
         </li>
         <li class="list__item">
-          <a href="/assets/resume/klangford_2020.pdf"
+          <a href="/assets/resume/klangford_resume.pdf"
             ><span class="icon-list icons-download-cloud"></span>Resume</a
           >
         </li>
       </ul>
     </div>
-
     <figure class="image">
       <img
         src="assets/img/svg/sunglasses.svg"
         class="icon-image position-bottom-right"
       />
     </figure>
-
   </div>
-
 </section>
