update to portfolio

--- a/src/templates/pages/work/drizly.html
+++ b/src/templates/pages/work/drizly.html
@@ -7,12 +7,10 @@ attribution: Work done at Raskyl
 last-edit: 10.31.19
 back-url: /work/all
 team:
--
-  name: Kyle Langford
-  title: Designer, Drupal Developer
--
-  name: Rachel Sorkin
-  title: Designer
+  - name: Kyle Langford
+    title: UI Designer, Angular Developer
+  - name: Rachel Sorkin
+    title: UI Designer
 ---
 
 {{> header}}
@@ -21,7 +19,6 @@ team:
   <div class="row flex flex--justify pad-default">
     <div class="column two-thirds">
       <article class="content">
-
         <div class="specimen stretch">
           <img
             src="../assets/img/projects/drizly/device-mockup-default.png"
@@ -31,7 +28,13 @@ team:
 
         <h4>Design and Generate HTML Emails</h4>
 
-        <p>I proposed that we design a library of blocks based on their existing emails. I boiled the emails down to 10 or so components. I designed a UI for arranging the blocks and populating them with content. This app would render the HTML in a preview panel and also allow you to export the generated HTML.</p>
+        <p>
+          I proposed that we design a library of block patterns based on their
+          existing email designs. We boiled the emails down to 10 or so
+          components. I designed a UI for arranging the blocks and populating
+          them with content. This app would render the HTML in a preview panel
+          and also allow you to export the generated HTML.
+        </p>
 
         <h5>Drag and Drag, Updates in Real Time</h5>
 
@@ -48,12 +51,12 @@ team:
           <img
             src="../assets/img/projects/drizly/email-drizly-CincoDeMayo-v1.jpg"
             alt="Elephant at sunset"
+            style="width: 80%;"
             class="paper"
           />
         </div>
 
         {{> credits}}
-
       </article>
     </div>
   </div>
