--- a/src/templates/layouts/default.html
+++ b/src/templates/layouts/default.html
@@ -13,7 +13,7 @@
     <title>{{meta_title}}</title>
 
     <!-- Load Resources -->
-    <link rel="icon" type="image/png" href="{{root}}/img/brand/favicon.png" />
+    <link rel="icon" type="image/png" href="{{root}}img/brand/favicon.png" />
     <link
       href="https://fonts.googleapis.com/css?family=Roboto|Rubik"
       rel="stylesheet"
