updating portfolio text

--- a/src/templates/pages/work/brm.html
+++ b/src/templates/pages/work/brm.html
@@ -6,13 +6,11 @@ description: Site Design and Drupal Development
 attribution: Work done at Brunello, Inc.
 last-edit: 10.31.19
 back-url: /work/all
-team:   
--
-  name: Adam Hoyle
-  title: Project Manager
-- 
-  name: Kyle Langford
-  title: UI Designer, Drupal Developer
+team:
+  - name: Adam Hoyle
+    title: Project Manager
+  - name: Kyle Langford
+    title: UI Designer, Drupal Developer
 ---
 
 {{> header}}
@@ -21,7 +19,6 @@ team:
   <div class="row flex flex--justify pad-default">
     <div class="column two-thirds">
       <article class="content">
-
         <div class="specimen stretch">
           <img
             src="../assets/img/projects/brm/device-mockup-feature.png"
@@ -29,16 +26,30 @@ team:
           />
 
           <div class="caption"></div>
-        </div> 
+        </div>
 
         <h4>Drupal site design and development.</h4>
 
         <p>
-          Bally Ribbon Mills needed an authoritive and modern site that resonated with its niche market. The website needed to be customizable and easy to update. Drupal was a perfect solution for this content managed website. The design process used sitemaps, wireframes, style-tiles, and full-page mockups. Site was created with Druapl 7.
+          <strong>Ask</strong> Bally Ribbon Mills produces a wide variety of
+          narrow woven fabrics, webbing, tapes and custom fabrication. They do
+          confidential work for the government but also have public clients like
+          NASA. (Sidenote: They made the descent parachute for one of the Mars
+          rovers). Bally wanted a Drupal website to manage and showcase their
+          product information and capabilities.
+        </p>
+
+        <p>
+          <strong>Outcome</strong> This was my first time as the design and
+          development lead for a web project at Brunello. I worked with Adam
+          Hoyle (Owner) to give Bally an authoritative and clearly laid out site
+          that made connecting with clients easy compared to competitors. I
+          produced the design work which included sitemaps, wireframes,
+          moodboards, and full-page mockups. Site development was done by me
+          using Drupal 7 CMS.
         </p>
 
         <h5>Sitemap</h5>
-
         <div class="specimen stretch">
           <img
             src="../assets/img/projects/brm/brm-sitemap_v1.jpg"
@@ -48,33 +59,29 @@ team:
         </div>
 
         <h5>Wireframes</h5>
-
         <div class="specimen">
           <div class="stack">
-
-          <img
-            src="../assets/img/projects/brm/brm-wires_page_1.png"
-            alt="Elephant at sunset"
-            class="paper"
-
-          />
-          <img
-            src="../assets/img/projects/brm/brm-wires_page_3.png"
-            alt="Elephant at sunset"
-            class="paper"
-          />
+            <img
+              src="../assets/img/projects/brm/brm-wires_page_1.png"
+              alt="Elephant at sunset"
+              class="paper"
+            />
+            <img
+              src="../assets/img/projects/brm/brm-wires_page_3.png"
+              alt="Elephant at sunset"
+              class="paper"
+            />
           </div>
         </div>
 
         <h5>Moodboards</h5>
-
         <div class="specimen">
           <img
             src="../assets/img/projects/brm/brm_tile-1.jpg"
             alt="Elephant at sunset"
             class="paper"
           />
-          <div class="caption"></div> 
+          <div class="caption"></div>
         </div>
 
         <div class="specimen">
@@ -87,9 +94,7 @@ team:
         </div>
 
         <h5 style="text-align:center;">Logo Design</h5>
-
         <div class="split">
-
           <div class="specimen text--center">
             <img
               src="../assets/img/projects/brm/square-2.jpg"
@@ -105,7 +110,6 @@ team:
         </div>
 
         {{> credits}}
-
       </article>
     </div>
   </div>
