--- a/src/templates/pages/work/drizly.html
+++ b/src/templates/pages/work/drizly.html
@@ -29,11 +29,21 @@ team:
         <h4>Design and Generate HTML Emails</h4>
 
         <p>
-          I proposed that we design a library of block patterns based on their
-          existing email designs. We boiled the emails down to 10 or so
-          components. I designed a UI for arranging the blocks and populating
-          them with content. This app would render the HTML in a preview panel
-          and also allow you to export the generated HTML.
+          <strong>Ask </strong> Drizly needed help designing and producing
+          emails in order to drive continuous traffic to their alcohol ordering
+          web service. My partner and I consulted with them for some time,
+          designing a reoccurring email and also helping code emails.
+        </p>
+
+        <p>
+          <strong>Outcome</strong> There was a lot of commonalities in the
+          emails we built. I proposed that we design a library of reusable
+          templates based on their existing email designs. We boiled the emails
+          down to a dozen or so components. I designed and built a UI for
+          arranging these templates and populating them with content. This app
+          would render the HTML in a preview panel and also allows you to export
+          the generated HTML, which we would place into Litmus and eventually
+          into ExactTarget.
         </p>
 
         <h5>Drag and Drag, Updates in Real Time</h5>
