--- a/src/templates/pages/work/paw.html
+++ b/src/templates/pages/work/paw.html
@@ -6,19 +6,15 @@ description: Site Design and Drupal Development
 attribution: Work done at Brunello, Inc.
 last-edit: 10.31.19
 back-url: /work/all
-team:   
--
-  name: Nicole Baltzer
-  title: Partner
--
-  name: Jason Fournier
-  title: UI Designer
--
-  name: Kyle Langford
-  title: UI Designer, Front-End Developer
--
-  name: Mike Calebrese
-  title: Drupal Developer
+team:
+  - name: Nicole Baltzer
+    title: Partner
+  - name: Jason Fournier
+    title: UI Designer
+  - name: Kyle Langford
+    title: UI Designer, Front-End Developer
+  - name: Mike Calebrese
+    title: Drupal Developer
 ---
 
 {{> header}}
@@ -27,7 +23,6 @@ team:
   <div class="row flex flex--justify pad-default">
     <div class="column two-thirds">
       <article class="content">
-
         <div class="specimen stretch">
           <img
             src="../assets/img/projects/paw/device-mockup-article.png"
@@ -38,15 +33,27 @@ team:
         <h4>Digital Magazine Publishing</h4>
 
         <p>
-          My accomplishments for this project include crafting a process
-          from research to development. I designed reusable components and
-          list styles that were used to layout all the pages of the site. I
-          was responsible for creating the sitemap, mobile-priority, layout
-          wireframes, and working prototype. I also produced all the
-          front-end production code, much of which was recycled from the
-          prototype.
+          <strong>Ask</strong> The alumni magazine was looking for a design more
+          inline with its magazine-style. Content varied month to month so they
+          wanted to make sure the site would always appear with a desirable
+          layout and that issues content. A unique part of this website is
+          previous content would only be available through the archive. The
+          website would very much be a digital magazine.
         </p>
-        
+
+        <p>
+          <strong>Outcome</strong> We had struggled to manage the wireframing
+          and design phase in previous projects. Our clients wanted to see
+          mockups in all screen size for all the pages we designed. I provided
+          leadership in creating a process to limit the amount of static comps
+          to a few pages types. I would design reusable HTML components and
+          styles that would be used to layout all the remaining pages. This
+          process allowed for more iteration and allowed us to focus our time
+          better. I was responsible for creating the sitemap, mobile-priority,
+          wireframes, and working prototype. I produced all the front-end
+          production code, much of which was recycled from the prototype.
+        </p>
+
         <div class="specimen">
           <img
             src="../assets/img/projects/paw/way-back.jpg"
@@ -59,8 +66,10 @@ team:
         </div>
 
         <p>
-          <strong>We wanted to add more of the magazines editorial look and
-          feel to the online experience.</strong>
+          <strong
+            >We wanted to add more of the magazines editorial look and feel to
+            the online experience.</strong
+          >
         </p>
 
         <div class="specimen text--center">
@@ -114,20 +123,19 @@ team:
             />
           </div>
           <div class="caption">
-            I created this Content Inventory &mdash; to show at a block
-            level the heirarchy of information for the page. We created a
-            list of all possible blocks and used that to scaffold out all
-            the page types. Types were assigned to blocks of similar
-            functionality to display placements.
+            I created this Content Inventory &mdash; to show at a block level
+            the heirarchy of information for the page. We created a list of all
+            possible blocks and used that to scaffold out all the page types.
+            Types were assigned to blocks of similar functionality to display
+            placements.
           </div>
         </div>
 
         <h5>Component Patterns</h5>
 
-         <p>
-          I wanted to allow flexibility in the feature list sections. No
-          matter the number of articles the presentation would always be
-          desirable.
+        <p>
+          I wanted to allow flexibility in the feature list sections. No matter
+          the number of articles the presentation would always be desirable.
         </p>
 
         <div class="specimen">
@@ -138,16 +146,13 @@ team:
           />
         </div>
 
-
         <div class="specimen">
           <img
             src="../assets/img/projects/paw/list-blocks.jpg"
             alt="Elephant at sunset"
             class="paper"
           />
- 
         </div>
-
 
         <h5>Wireframe Example</h5>
         <div class="specimen stretch">
@@ -159,29 +164,27 @@ team:
         </div>
 
         <div class="specimen">
-          <img 
-            src="../assets/img/projects/paw/wireframe-rwd-article-page.png" 
-            alt="A nice description">
+          <img
+            src="../assets/img/projects/paw/wireframe-rwd-article-page.png"
+            alt="A nice description"
+          />
         </div>
 
         <h5>HTML Prototype</h5>
         <p>
           I devised a simple template system that I used to create the
-          prototype. We ended with 41 pages made with approx 30 components
-          with about 100 variations. Below is a working version of that prototype, follow the orange dots for active links.
-
+          prototype. We ended with 41 pages made with approx 30 components with
+          about 100 variations. Below is a working version of that prototype,
+          follow the orange dots for active links.
         </p>
 
         <div class="text--center button-group">
-          <a
-            href="/demo/paw.wires/index.html"
-            class="button button--primary"
+          <a href="/demo/paw.wires/index.html" class="button button--primary"
             >View Prototype</a
           >
         </div>
 
         {{> credits}}
-
       </article>
     </div>
   </div>
