--- a/src/templates/pages/work/cpl.html
+++ b/src/templates/pages/work/cpl.html
@@ -6,13 +6,11 @@ description: Wayfinding and Signage
 attribution: Work done at Wojciechowski Design
 last-edit: 10.31.19
 back-url: /work/all
-team:   
--
-  name: Tom Wojciechowski
-  title: Principal designer
--
-  name: Kyle Langford
-  title: Project Designer
+team:
+  - name: Tom Wojciechowski
+    title: Principal designer
+  - name: Kyle Langford
+    title: Project Designer
 ---
 
 {{> header}}
@@ -21,7 +19,6 @@ team:
   <div class="row flex flex--justify pad-default">
     <div class="column two-thirds">
       <article class="content">
-
         <div class="specimen stretch">
           <img
             src="../assets/img/projects/cpl/p-cpl.jpg"
@@ -35,11 +32,22 @@ team:
         <h4>Enviromental Signage.</h4>
 
         <p>
-          This project was for the Cambridge Public Library with the
-          addition of the modern wing. I worked as a project designer with
-          the principal designer to create designs and draft the artwork
-          sent to the fabricators. This work included all signage for the
-          interior and exterior of the building.
+          <strong>Ask</strong> The Cambridge Public Library wanted to create a
+          new interior and exterior signage system for the newly renovated
+          building and new building section.
+        </p>
+
+        <p>
+          <strong>Outcome</strong> I worked as the Project Designer with the
+          Principal Designer (Tom) to conceptualize and design the signage and
+          wayfinding of the building using architectural drawings and virtual
+          walkthroughs as references. This included everything from welcome
+          signs, floor maps, restroom signs, even the numbers on the elevator
+          jams. I choose the typography, photography, and visual styles used for
+          the project. I drafted production ready artwork to send to
+          fabrication, this included designing mounts, selecting materials, and
+          demonstrating exact sign placement. I also created 3D/2D
+          visualizations to present design work to the client for review.
         </p>
 
         <div class="specimen">
@@ -104,7 +112,6 @@ team:
         </div>
 
         {{> credits}}
-
       </article>
     </div>
   </div>
