--- a/src/templates/pages/work/hle.html
+++ b/src/templates/pages/work/hle.html
@@ -6,19 +6,15 @@ description: UI Design and Frontend Development
 attribution: Work done at Brunello, Inc.
 last-edit: 10.31.19
 back-url: /work/all
-team:   
--
-  name: Adam Hoyle
-  title: Partner
--
-  name: Jason Fournier
-  title: UI Designer
--
-  name: Kyle Langford
-  title: UX Designer, Front-End Developer
--
-  name: Mike Calebrese
-  title: Drupal Developer
+team:
+  - name: Adam Hoyle
+    title: Partner
+  - name: Jason Fournier
+    title: UI Designer
+  - name: Kyle Langford
+    title: UX Designer, Front-End Developer
+  - name: Mike Calebrese
+    title: Drupal Developer
 ---
 
 {{> header}}
@@ -27,8 +23,9 @@ team:
   <div class="row flex flex--justify pad-default">
     <div class="column two-thirds">
       <article class="content">
-
-        <p style="text-align: center;"><strong>Healthy Content</strong> Through your Healthplan</p>
+        <p style="text-align: center;">
+          <strong>Healthy Content</strong> Through your Healthplan
+        </p>
 
         <div class="specimen stretch">
           <img
@@ -37,6 +34,25 @@ team:
           />
         </div>
 
+        <p>
+          <strong>Ask</strong> A centralized content publishing platform for
+          recipes, healthy articles, and coupons. The Platform needed to provide
+          hosted microsites that can be customized in look and content. Content
+          was targeted at healthcare plans looking to supplement their digitial
+          communications and benefits. The Platform also needed to provide a
+          suite of content creation tools, such as lineups, reporting,
+          workflows, and project tracking.
+        </p>
+
+        <p>
+          <strong>Outcome</strong> We created a powerful Drupal API and
+          Multisite application that could handle the changing demands of a
+          content publishing platform. We designed a flexible theme that is
+          easily customizable and updatable. Content can be packaged and sent to
+          microsites and controlled from a centralized point. We designed easy
+          to use custom backend themes to create content and reports. We
+          continue to develop features and push the product into the future.
+        </p>
 
         <div class="split">
           <div class="specimen" style="text-align: center;">
@@ -50,7 +66,7 @@ team:
               src="../assets/img/projects/hle/device-mockup-shoppinglist.png"
               alt="Elephant at sunset"
             />
-          </div>      
+          </div>
         </div>
 
         <h5>Content Publishing Platform</h5>
@@ -94,7 +110,6 @@ team:
         </div>
 
         {{> credits}}
-
       </article>
     </div>
   </div>
