--- a/src/scss/mixins/_clearfix.scss
+++ b/src/scss/mixins/_clearfix.scss
@@ -1,19 +1,16 @@
 /*
- * Clearfix
+  Clearfix
+
+
+  
 */
 
-// Clearfix
-//
-// Your standard button suitable for clicking.
-//
-// Style guide: Mixins.Clearfix
-
 @mixin clearfix {
-  overflow: hidden;
+	overflow: hidden;
 
-  &:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
+	&:after {
+		content: '';
+		display: table;
+		clear: both;
+	}
 }
