--- a/src/templates/pages/work/brm.html
+++ b/src/templates/pages/work/brm.html
@@ -10,7 +10,7 @@ team:
   - name: Adam Hoyle
     title: Project Manager
   - name: Kyle Langford
-    title: UI Designer, Drupal Developer
+    title: Designer, Drupal Developer
 ---
 
 {{> header}}
@@ -49,7 +49,7 @@ team:
           using Drupal 7 CMS.
         </p>
 
-        <h5>Sitemap</h5>
+        <h5>IA: Sitemap</h5>
         <div class="specimen stretch">
           <img
             src="../assets/img/projects/brm/brm-sitemap_v1.jpg"
