--- a/src/templates/pages/work/cpl.html
+++ b/src/templates/pages/work/cpl.html
@@ -8,9 +8,9 @@ last-edit: 10.31.19
 back-url: /work/all
 team:
   - name: Tom Wojciechowski
-    title: Principal designer
+    title: Principal
   - name: Kyle Langford
-    title: Project Designer
+    title: Designer
 ---
 
 {{> header}}
@@ -25,6 +25,7 @@ team:
             style="width: 100%;"
             alt="Elephant at sunset"
             class="paper"
+            loading="eager"
           />
           <div class="caption">Reverse channel letters on canopy.</div>
         </div>
@@ -52,9 +53,33 @@ team:
 
         <div class="specimen">
           <img
+            src="../assets/img/projects/cpl/p-cpl-diagram.jpg"
+            style="width: 100%;"
+            alt="Elephant at sunset"
+            class="paper"
+            loading="lazy"
+          />
+        </div>
+
+        <div class="specimen">
+          <img
+            src="../assets/img/projects/cpl/exterior-night.jpg"
+            style="width: 100%;"
+            alt="Elephant at sunset"
+            class="paper"
+            loading="lazy"
+          />
+          <div class="caption">
+            Photocredit
+          </div>
+        </div>
+
+        <div class="specimen">
+          <img
             src="../assets/img/projects/cpl/156.jpg"
             alt="Elephant at sunset"
             class="paper"
+            loading="lazy"
           />
           <div class="caption">
             Large hanging signs in the hallway that separates the original
@@ -64,23 +89,46 @@ team:
 
         <div class="specimen">
           <img
+            src="../assets/img/projects/cpl/182.jpg"
+            alt="Elephant at sunset"
+            style="width: 100%;"
+            class="paper"
+            loading="lazy"
+          />
+          <div class="caption">Large sign going up stairway.</div>
+        </div>
+
+        <div class="specimen stretch">
+          <img
+            src="../assets/img/projects/cpl/signs.jpg"
+            style="width: 100%;"
+            alt="Elephant at sunset"
+            class="paper"
+            loading="lazy"
+          />
+          <div class="caption">Elevation.</div>
+        </div>
+
+        <div class="specimen">
+          <img
             src="../assets/img/projects/cpl/180.jpg"
             alt="Elephant at sunset"
             class="paper"
+            loading="lazy"
           />
           <div class="caption">
             Medium hanging signs on the second floor, top of main stairs.
           </div>
         </div>
-
         <div class="specimen stretch">
           <img
-            src="../assets/img/projects/cpl/182.jpg"
-            alt="Elephant at sunset"
+            src="../assets/img/projects/cpl/profile.jpg"
             style="width: 100%;"
+            alt="Elephant at sunset"
             class="paper"
+            loading="lazy"
           />
-          <div class="caption">Large sign going up stairway.</div>
+          <div class="caption">Lorem Ipsum</div>
         </div>
 
         <div class="specimen">
@@ -88,6 +136,7 @@ team:
             src="../assets/img/projects/cpl/190.jpg"
             alt="Elephant at sunset"
             class="paper"
+            loading="lazy"
           />
           <div class="caption">First floor directory.</div>
         </div>
@@ -97,16 +146,53 @@ team:
             src="../assets/img/projects/cpl/171.jpg"
             alt="Elephant at sunset"
             class="paper"
+            loading="lazy"
           />
           <div class="caption">Restroom Sign.</div>
         </div>
 
+        <p>
+          <strong>Exterior Signs</strong>
+        </p>
+
+        <div class="stretch">
+          <video
+            controls
+            width="100%"
+            class="video-player"
+            poster="../assets/img/projects/cpl/exterior-signs-3.jpg"
+          >
+            <source
+              src="../assets/video/exterior-signs-spin.webm"
+              type="video/webm"
+            />
+            <!--             <source
+              src="../assets/video/video-player-workout.mp4"
+              type="video/mp4"
+            /> -->
+
+            Sorry, your browser doesn't support embedded videos.
+          </video>
+        </div>
+
         <div class="specimen stretch">
           <img
-            src="../assets/img/projects/cpl/209.jpg"
+            src="../assets/img/projects/cpl/outside.jpg"
+            style="width: 100%;"
+            alt="Elephant at sunset"
+            class="paper"
+            loading="lazy"
+          />
+          <div class="caption">Reverse channel letters on canopy.</div>
+        </div>
+
+        <div class="specimen stretch">
+          <img
+            src="../assets/img/projects/cpl/garage.jpg"
             alt="Elephant at sunset"
             class="paper"
             style="width: 100%;"
+            loading="lazy"
           />
           <div class="caption">Garage entrance</div>
         </div>
