--- a/src/templates/pages/work/drizly.html
+++ b/src/templates/pages/work/drizly.html
@@ -8,9 +8,9 @@ last-edit: 10.31.19
 back-url: /work/all
 team:
   - name: Kyle Langford
-    title: UI Designer, Angular Developer
+    title: Designer, Angular Developer
   - name: Rachel Sorkin
-    title: UI Designer
+    title: Designer
 ---
 
 {{> header}}
