--- a/src/templates/pages/work/fitnessapp.html
+++ b/src/templates/pages/work/fitnessapp.html
@@ -10,9 +10,9 @@ team:
   - name: Nicole Baltzer
     title: Partner
   - name: Jason Fournier
-    title: UI Designer
+    title: Designer
   - name: Kyle Langford
-    title: UX Designer, Front-End Developer
+    title: Designer, Front-End Developer
   - name: Christian Gonzalez
     title: Developer
 ---
