--- a/src/templates/pages/work/paw.html
+++ b/src/templates/pages/work/paw.html
@@ -10,9 +10,9 @@ team:
   - name: Nicole Baltzer
     title: Partner
   - name: Jason Fournier
-    title: UI Designer
+    title: Designer
   - name: Kyle Langford
-    title: UI Designer, Front-End Developer
+    title: Designer, Front-End Developer
   - name: Mike Calebrese
     title: Drupal Developer
 ---
@@ -89,19 +89,10 @@ team:
             alt="Elephant at sunset"
             class="paper"
           />
-          <div class="caption">Inspiration Style Collage #1.</div>
+          <div class="caption">Inspiration Style Collage.</div>
         </div>
 
-        <div class="specimen">
-          <img
-            src="../assets/img/projects/paw/style-tile-2.png"
-            alt="Elephant at sunset"
-            class="paper"
-          />
-          <div class="caption">Inspiration Style Collage #2.</div>
-        </div>
-
-        <h5>Sitemap</h5>
+        <h5>IA: Sitemap</h5>
         <div class="specimen stretch">
           <img
             src="../assets/img/projects/paw/sitemap_v1.jpg"
@@ -110,7 +101,7 @@ team:
           />
         </div>
 
-        <h5>Content Priority</h5>
+        <h5>IA: Content Priority</h5>
         <div class="specimen stretch">
           <div class="stack">
             <img
@@ -131,7 +122,7 @@ team:
           </div>
         </div>
 
-        <h5>Component Patterns</h5>
+        <h5>UI Patterns</h5>
 
         <p>
           I wanted to allow flexibility in the feature list sections. No matter
