--- a/src/scss/mixins/_buttonize.scss
+++ b/src/scss/mixins/_buttonize.scss
@@ -1,29 +1,37 @@
+/*
+  Buttonize
+
+*/
+
 @mixin buttonize {
-  appearance: none;
-  cursor: pointer;
   display: inline-block;
   line-height: normal;
-  -webkit-font-smoothing: antialiased;
-  user-select: none;
+  font-size: 1rem;
+  font-weight: 600;
   vertical-align: middle;
   white-space: nowrap;
   text-shadow: none;
-  font-size: 1rem;
-  font-weight: 600;
 
-  &:hover,
-  &:focus,
-  &:active {
-    box-shadow: none;
-    text-decoration: none;
-  }
+  appearance: none;
+  user-select: none;
+  cursor: pointer;
+  // -webkit-font-smoothing: antialiased;
+
+  // @include prefix(transition) transition: background-color 0.15s &: hover
+
+  // &: focus, &: active {
+  //   // box-shadow: none;
+  //   text-decoration: none;
+  // }
 
   &:disabled,
   &:disabled:active,
   &.is-disabled,
   &.is-disabled:active {
-    box-shadow: none;
+    // box-shadow: none;
     cursor: not-allowed;
     opacity: 0.5;
   }
 }
+
+
