--- a/src/scss/mixins/_panelize.scss
+++ b/src/scss/mixins/_panelize.scss
@@ -1,17 +1,12 @@
 /*
- * Panel
+  Panel
+
+	Container with a fixed height
+
 */
 
-// Panel
-//
-// Container with a fixed height
-//
-// Markup: panelize/panelize.twig
-//
-// Style guide: Mixins.panelize
-
 @mixin panelize($local-max-height: $max-height) {
-  min-height: $local-max-height;
-  position: relative;
-  width: 100%;
+	min-height: $local-max-height;
+	position: relative;
+	width: 100%;
 }
