--- a/src/templates/pages/work/all.html
+++ b/src/templates/pages/work/all.html
@@ -3,31 +3,25 @@ meta_title: 'Portfolio | Kyle Langford'
 meta_description: 'A list of professional design and development work'
 back_url: /
 back_text: $ cd ..
-work:   
--
-  title: Bally Ribbon Mills
-  description: Web Design, Logo Design, Drupal Development
-  href: /work/brm
--
-  title: Cambridge Public Library
-  description: Enviromental Signage, Wayfinding.
-  href: /work/cpl
--
-  title: Drizly
-  description: Product Design, AngularJS Development
-  href: /work/drizly
--
-  title: Elev8d Fitness
-  description: UX Design, Angular Development.
-  href: /work/fitnessapp
--
-  title: Healthy Living Engine
-  description: Frontend Development, Drupal Development, UX Design
-  href: /work/hle
--
-  title: Princeton Alumni Magazine
-  description: UX Design, Drupal Development
-  href: /work/paw
+work:
+  - title: Bally Ribbon Mills
+    description: Branding, Design, Drupal Development
+    href: /work/brm
+  - title: Cambridge Public Library
+    description: Enviromental Signage and Wayfinding.
+    href: /work/cpl
+  - title: Drizly
+    description: Design, AngularJS Development
+    href: /work/drizly
+  - title: Elev8d Fitness
+    description: Experience Design, Angular Development.
+    href: /work/fitnessapp
+  - title: Healthy Living Engine
+    description: Design, Drupal Development
+    href: /work/hle
+  - title: Princeton Alumni Magazine
+    description: Design, Drupal Development
+    href: /work/paw
 ---
 
 <header class="container size-to-window portfolio">
@@ -47,20 +41,19 @@ work:
 <main class="container">
   <div class="row flex flex--justify pad-default">
     <div class="column two-thirds">
-
       <h3 class="list-title animate fade-in">Best Stuff</h3>
       <ul class="list portfolio">
         {{#each work}}
-          <li class="list__item animate fade-in">
-            <article class="view--teaser">
-              <a href="{{ this.href }}">
-                <span class="label">{{ this.title }}</span>
-                <p>
-                  {{ this.description }}
-                </p>
-              </a>
-            </article>
-          </li>
+        <li class="list__item animate fade-in">
+          <article class="view--teaser">
+            <a href="{{ this.href }}">
+              <span class="label">{{ this.title }}</span>
+              <p>
+                {{ this.description }}
+              </p>
+            </a>
+          </article>
+        </li>
         {{/each}}
       </ul>
 
@@ -68,7 +61,6 @@ work:
         <!-- Credits: Copyright -->
         <h2 class="last-edit">THANK YOU</h2>
       </div>
-      
     </div>
   </div>
 </main>
