--- a/src/templates/pages/work/hle.html
+++ b/src/templates/pages/work/hle.html
@@ -10,9 +10,9 @@ team:
   - name: Adam Hoyle
     title: Partner
   - name: Jason Fournier
-    title: UI Designer
+    title: Designer
   - name: Kyle Langford
-    title: UX Designer, Front-End Developer
+    title: Designer, Front-End Developer
   - name: Mike Calebrese
     title: Drupal Developer
 ---
